--- a/main.css
+++ b/main.css
@@ -1,3 +1,12 @@
 body{
-  background-color: red
+  background-color: #ffe7fc;
+  font-family: sans-serif;
+  margin: 0 auto;
+  text-align: center;
+}
+
+h1{
+  background-color: #ea5169;
+  border-radius: 100px;
+
 }
