--- a/main.css
+++ b/main.css
@@ -8,5 +8,16 @@ body{
 h1{
   background-color: #ea5169;
   border-radius: 100px;
+}
+
+p{
+  width: 80%;
+  margin: 0 auto;
+}
+
+img{
+  border-radius: 50%;
+  padding-top: 50px;
+  padding-bottom: 50px;
 
 }
