--- a/main.css
+++ b/main.css
@@ -17,7 +17,11 @@ p{
 
 img{
   border-radius: 50%;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  margin-top: 70px;
+  margin-bottom: 50px;
+  margin-right: 50px;
+}
 
+footer{
+  font-size: 9px;
 }
